--- a/notice.html
+++ b/notice.html
@@ -431,6 +431,15 @@
                     <!-- Using the new CSS-only marquee for better continuity -->
                     <div class="marquee-content scrolling-note" id="continuous-marquee">
                         📢 IMPORTANT NOTE: The system is undergoing some updates for the benefit of the community and for long-term planning, so please wait a bit. Trading will be live soon with excellent smoothness. So we are going to go live after a break. • 
+                        📢 IMPORTANT NOTE: The system is undergoing some updates for the benefit of the community and for long-term planning, so please wait a bit. Trading will be live soon with excellent smoothness. So we are going to go live after a break. • 
+                        📢 IMPORTANT NOTE: The system is undergoing some updates for the benefit of the community and for long-term planning, so please wait a bit. Trading will be live soon with excellent smoothness. So we are going to go live after a break. • 
+                        📢 IMPORTANT NOTE: The system is undergoing some updates for the benefit of the community and for long-term planning, so please wait a bit. Trading will be live soon with excellent smoothness. So we are going to go live after a break. • 
+                        📢 IMPORTANT NOTE: The system is undergoing some updates for the benefit of the community and for long-term planning, so please wait a bit. Trading will be live soon with excellent smoothness. So we are going to go live after a break. • 
+                        📢 IMPORTANT NOTE: The system is undergoing some updates for the benefit of the community and for long-term planning, so please wait a bit. Trading will be live soon with excellent smoothness. So we are going to go live after a break. • 
+                        📢 IMPORTANT NOTE: The system is undergoing some updates for the benefit of the community and for long-term planning, so please wait a bit. Trading will be live soon with excellent smoothness. So we are going to go live after a break. • 
+                        📢 IMPORTANT NOTE: The system is undergoing some updates for the benefit of the community and for long-term planning, so please wait a bit. Trading will be live soon with excellent smoothness. So we are going to go live after a break. • 
+                        📢 IMPORTANT NOTE: The system is undergoing some updates for the benefit of the community and for long-term planning, so please wait a bit. Trading will be live soon with excellent smoothness. So we are going to go live after a break. • 
+                        📢 IMPORTANT NOTE: The system is undergoing some updates for the benefit of the community and for long-term planning, so please wait a bit. Trading will be live soon with excellent smoothness. So we are going to go live after a break. • 
                     </div>
                 </div>
             </div>
